@@ -1,4 +1,9 @@
 2012-02-11  Robert Larice
+ * src/spicelib/parser/inpptree-parser.c ,
+ * src/spicelib/parser/inpptree-parser.h :
+   update bison generated files
+
+2012-02-11  Robert Larice
  * src/spicelib/parser/inpptree-parser.y ,
  * src/spicelib/parser/inpptree.c :
    upgrade INPgetTree()
